# config-service

./: .gitignore  INTEGRATE.md  JOURNAL.md  PART_1.md  PART_2.md  README.md
config-service/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  migrations.py  migrations_test.py  pyproject.toml
config-service-b/: .env.example  Makefile  README.md  migrations.py  migrations_test.py  pyproject.toml  tests_core_test.py
config-service-b/app/: main.py  main_test.py
config-service-b/app/api/: deps.py
config-service-b/app/core/: config.py  timeutils.py
config-service-b/app/db/: pool.py  sql.py
config-service-b/app/models/: dto.py  types.py
config-service-b/app/repositories/: applications_repo.py  configurations_repo.py
config-service-b/app/services/: applications_service.py  configurations_service.py
config-service-b/migrations/: 0001_init.sql
config-service/app/: __init__.py  main.py  main_test.py
config-service/app/api/: deps.py
config-service/app/core/: config.py  timeutils.py
config-service/app/db/: pool.py  sql.py
config-service/app/models/: types.py
config-service/app/repositories/: applications_repo.py  configurations_repo.py
config-service/app/services/: applications_service.py  (+1 more)
config-service/migrations/: 0001_init.sql  0002_seed_data.sql
config-service/pydantic_extra_types/: __init__.py  ulid.py
config-service/scripts/: generate_endpoint_summary.py
config-service/tests/: api_test.py  applications_configurations_api_test.py  conftest.py  migrations_test.py  repositories_test.py  services_test.py  settings_test.py
(+53 files in other folders)
