[project]
name = "config-service-b"
version = "0.1.0"
description = "REST API for managing applications and configurations"
dependencies = [
    "fastapi==0.116.1",
    "pydantic==2.11.7",
    "pydantic-extra-types==2.11.7",
    "pydantic-settings>=2,<3",
    "psycopg2==2.9.10",
    "uvicorn[standard]>=0.30.0,<1.0.0"
]
requires-python = ">=3.13.5,<3.14"

[project.optional-dependencies]
test = [
    "pytest==8.4.1",
    "httpx==0.28.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.scripts]
migrations = "migrations:main"
migrations_test = "migrations_test:main"
